2006-10-05  Sven Herzberg  <herzi@gnome-de.org>

	* autogen.sh: use --copy on intltoolize, so modifying
	po/Makefile.in.in doesn't fail for the missing permissions

2006-03-01  Daniel Nylander  <po@danielnylander.se>

        * po/sv.po: Updated Swedish translation.
	
2005-12-13  Murray Cumming  <murrayc@murrayc.com>

	* autogen.sh: Use --force on intltoolize, because it was 
	complaining about an old Makefile.in.in.
	* configure.ac:
	* src/Makefile.am: Change PKG_CFLAGS/LIBS to REGEXXER_CFLAGS/LIBS 
	because the latest autoconf (or something) complains that PKG_CFLAGS 
	may be undefined. Not sure why, but this fixes it.

2004-07-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4 (REGEXXER_LINK_VERSION_SCRIPT): Rename from
	REGEXXER_CXXLINK_VERSION_SCRIPT() and make the macro language-
	acnostic.  Also, take the name of the output variable to set as
	first parameter instead of hardcoding it.
	(REGEXXER_ARG_ENABLE_WARNINGS): Don't change the current language
	but use AC_LANG_ASSERT() instead to make sure it's C++.  The user
	is required to select the approriate language by himself then, as
	recommended in the autoconf manual.

	* macros/misc.m4 (REGEXXER_LIB_POPT): Make language-acnostic.
	* macros/pcre.m4 (PCRE_CHECK_UTF8): ditto.

	* configure.ac: Reorder a couple of macro invocations and insert
	a call to AC_LANG([C++]).

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (parse_command_line): Fix the help string of the
	--ignore-case option to match the tool tip of the corresponding
	checkbutton.

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (parse_command_line): Replace `...' with \"...\" in
	message strings, for consistency with the rest of the application.

2004-07-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.{cc,h} (FileBuffer::find_matches): Add a feedback
	slot parameter and invoke it for every matching line.  The current