@@ -55,6 +55,7 @@ PCRE_CHECK_UTF8()
 
 REGEXXER_LIB_POPT()
 
+REGEXXER_LINK_EXPORT_DYNAMIC([REGEXXER_EXPORT_DYNAMIC])
 REGEXXER_LINK_VERSION_SCRIPT([REGEXXER_VERSION_SCRIPT], [src/exported-symbols])
 REGEXXER_ARG_ENABLE_WARNINGS()
 
