@@ -69,6 +69,6 @@ global_defines = \
 
 AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) $(global_defines) $(REGEXXER_CFLAGS) $(PCRE_CFLAGS)
 regexxer_DEPENDENCIES = exported-symbols
-regexxer_LDFLAGS = $(REGEXXER_VERSION_SCRIPT)
+regexxer_LDFLAGS = $(REGEXXER_EXPORT_DYNAMIC) $(REGEXXER_VERSION_SCRIPT)
 regexxer_LDADD = $(LIBINTL) $(REGEXXER_LIBS) $(PCRE_LIBS) $(POPT_LIBS)
 
